--- a/app/src/main/res/layout/activity_cameraman.xml
+++ b/app/src/main/res/layout/activity_cameraman.xml
@@ -8,7 +8,7 @@
                                              tools:context=".Cameraman.CameramanActivity">
 
     <TextView
-            android:id="@+id/title_take_a_photo"
+            android:id="@+id/text_take_a_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -21,26 +21,26 @@
 
     <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/action_take_face"
+            android:id="@+id/act_button_face_photo"
             android:text="FACE"
             android:layout_marginTop="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/action_take_label"
-            app:layout_constraintTop_toBottomOf="@id/title_take_a_photo"
+            app:layout_constraintRight_toLeftOf="@id/act_button_label_photo"
+            app:layout_constraintTop_toBottomOf="@id/text_take_a_photo"
     />
     <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:id="@+id/action_take_label"
-            app:layout_constraintTop_toBottomOf="@id/title_take_a_photo"
+            android:id="@+id/act_button_label_photo"
+            app:layout_constraintTop_toBottomOf="@id/text_take_a_photo"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/action_take_face"
+            app:layout_constraintLeft_toRightOf="@id/act_button_face_photo"
             android:text="other"
     />
 
 
     <ImageView
-            android:id="@+id/result_take_a_photo"
+            android:id="@+id/dis_image_photo_result"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="32dp"
@@ -49,12 +49,12 @@
             app:layout_constraintDimensionRatio="W,1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/warring_content_image"
+            app:layout_constraintTop_toBottomOf="@id/text_warring_content_image"
             app:layout_constraintWidth_percent="0.8"/>
 
     <TextView
             android:layout_marginTop="8dp"
-            android:id="@+id/warring_content_image"
+            android:id="@+id/text_warring_content_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Image have face or lable"
@@ -63,7 +63,7 @@
             android:textStyle="bold|italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/action_take_label"
+            app:layout_constraintTop_toBottomOf="@id/act_button_label_photo"
     />
 </android.support.constraint.ConstraintLayout>
 
